Ajouter la proprieté URL_REQUEST aux fichiers de le configuration de l'environnement.

--- a/env/config.prod.json
+++ b/env/config.prod.json
@@ -1,5 +1,6 @@
 {
-	"NODE_ENV" : "prod",
-	"MONGO_URI" : "localhost" ,
-	"MONGO_DB" : "adaptation"
+	"NODE_ENV": "prod",
+	"MONGO_URI": "localhost",
+	"MONGO_DB": "adaptation",
+	"URL_REQUEST": "http://54.204.239.120"
 }
