--- a/env/config.recette.json
+++ b/env/config.recette.json
@@ -1,5 +1,6 @@
 {
-	"NODE_ENV" : "recette",
-	"MONGO_URI" : "localhost" ,
-	"MONGO_DB" : "adaptation"
+	"NODE_ENV": "recette",
+	"MONGO_URI": "localhost",
+	"MONGO_DB": "adaptation",
+	"URL_REQUEST": "http://62.210.129.181:3000"
 }
